--- a/力扣/力扣算法.md
+++ b/力扣/力扣算法.md
@@ -9370,6 +9370,54 @@ let result=numberOfLines(widths,s);
 console.log(result);
 ```
 
+## 819.最常见的单词
+
+给定一个段落 (paragraph) 和一个禁用单词列表 (banned)。返回出现次数最多，同时不在禁用列表中的单词。
+
+题目保证至少有一个词不在禁用列表中，而且答案唯一。
+
+禁用列表中的单词用小写字母表示，不含标点符号。段落中的单词不区分大小写。答案都是小写字母。
+
+提示：
+
+1 <= 段落长度 <= 1000
+0 <= 禁用单词个数 <= 100
+1 <= 禁用单词长度 <= 10
+答案是唯一的, 且都是小写字母 (即使在 paragraph 里是大写的，即使是一些特定的名词，答案都是小写的。)
+paragraph 只包含字母、空格和下列标点符号!?',;.
+不存在没有连字符或者带有连字符的单词。
+单词里只包含字母，不会出现省略号或者其他标点符号。
+
+```js
+/**
+ * @param {string} paragraph
+ * @param {string[]} banned
+ * @return {string}
+ */
+var mostCommonWord = function(paragraph, banned) {
+    paragraph=paragraph.replace(/[!?',;.]/g," ");
+    paragraph=paragraph.toLowerCase().split(" ");
+    let m=new Map();
+    let max=0;
+    let ans="";
+    for (let word of paragraph){
+        if (word!=="" && banned.indexOf(word)===-1) {
+            m.set(word,m.has(word) ? m.get(word)+1 : 1);
+            if (m.get(word)>max){
+                max=m.get(word);
+                ans=word;
+            }
+        }
+    }
+    return ans;
+};
+
+let paragraph = "Bob hit a ball, the hit BALL flew far after it was hit.";
+let banned = ["hit"]
+let result=mostCommonWord(paragraph,banned);
+console.log(result);
+```
+
 
 
 ## 825. 适龄的朋友
