--- a/牛客刷题题目/前端校招面试题目合集.md
+++ b/牛客刷题题目/前端校招面试题目合集.md
@@ -381,3 +381,794 @@ fromIndex：可选
 
 ------
 
+#### 2.10 webComponents
+
+**参考答案：**
+
+**Web Components** 总的来说是提供一整套完善的封装机制来把 Web 组件化这个东西标准化，每个框架实现 的组件都统一标准地进行输入输出，这样可以更好推动组件的复用
+
+包含四个部分
+
+1. Custom Elements
+
+2. HTML Imports
+
+3. HTML Templates
+
+4. Shadow DOM
+
+**Custom Elements**
+
+提供一种方式让开发者可以自定义 HTML 元素，包括特定的组成，样式和行为。支持 Web Components 标准的浏览器会提供一系列 API 给开发者用于创建自定义的元素，或者扩展现有元素。
+
+**HTML Imports**
+
+一种在 HTMLs 中引用以及复用其他的 HTML 文档的方式。这个 Import 很漂亮，可以简单理解为我们常见 的模板中的include之类的作用
+
+**HTML Templates**
+
+模板
+
+**Shadow DOM**
+
+提供一种更好地组织页面元素的方式，来为日趋复杂的页面应用提供强大支持，避免代码间的相互影响
+
+------
+
+#### 2.11 dva的数据流流向是怎么样的
+
+**参考答案：**
+
+数据的改变发生通常是通过用户交互行为或者浏览器行为（如路由跳转等）触发的，当此类行为会改变数据 的时候可以通过dispatch发起一个 action，如果是同步行为会直接通过Reducers改变State，如果是 异步行为（副作用）会先触发Effects然后流向Reducers最终改变State，所以在 dva 中，数据流向非 常清晰简明，并且思路基本跟开源社区保持一致。
+
+![dva数据流动](E:\pogject\学习笔记\image\js\dva数据流动.png)
+
+------
+
+#### 2.12 变量提升
+
+**参考答案：**
+
+JavaScript是单线程语言，所以执行肯定是按顺序执行。但是并不是逐行的分析和执行，而是一段一段地分析执行，会先进行编译阶段然后才是执行阶段。**在编译阶段，代码真正执行前的几毫秒，会检测到所有的变量和函数声明**，**所有这些函数和变量声明都被添加到名为Lexical Environment(词法环境)的JavaScript数据结构内的内存中**。所以**这些变量和函数能在它们真正被声明之前使用**。
+
+变量提升（Hoisting）被认为是， Javascript中执行上下文 （特别是创建和执行阶段）工作方式的一种认识。在 [ECMAScript® 2015 Language Specification](https://www.ecma-international.org/ecma-262/6.0/index.html) 之前的JavaScript文档中找不到变量提升（Hoisting）这个词。不过，需要注意的是，开始时，这个概念可能比较难理解，甚至恼人。
+
+例如，从概念的字面意义上说，“变量提升”意味着变量和函数的声明会在物理层面移动到代码的最前面，但这么说并不准确。实际上变量和函数声明在代码里的位置是不会动的，而是在编译阶段被放入内存中。
+
+JavaScript 在执行任何代码段之前，将函数声明放入内存中的优点之一是，你可以在声明一个函数之前使用该函数。
+
+```js
+/**
+* 不推荐的方式：先调用函数，再声明函数
+*/
+
+catName("Chloe");
+
+function catName(name) {
+    console.log("我的猫名叫 " + name);
+}
+
+/*
+代码执行的结果是: "我的猫名叫 Chloe"
+*/
+```
+
+即使我们在定义这个函数之前调用它，函数仍然可以工作。这是因为在 JavaScript 中**执行上下文**的工作方式造成的。
+
+变量提升也适用于其他数据类型和变量。变量可以在声明之前进行初始化和使用。但是如果没有初始化，就不能使用它们。
+
+译者注： 函数和变量相比，会被优先提升。**这意味着函数会被提升到更靠前的位置**。
+
+[只有声明被提升](https://developer.mozilla.org/zh-CN/docs/Glossary/Hoisting#只有声明被提升)
+
+JavaScript 只会提升声明，**不会提升其初始化**。如果一个变量先被使用再被声明和赋值的话，使用时的值是 undefined。参见例子：
+
+```js
+console.log(num); // Returns undefined
+var num;
+num = 6;
+```
+
+如果你先赋值、再使用、最后声明该变量，使用时能获取到所赋的值
+
+```js
+num = 6;
+console.log(num); // returns 6
+var num;
+```
+
+再来看几个类似的例子：
+
+```js
+// Example 1 - only y is hoisted
+var x = 1;                 // 声明 + 初始化 x
+console.log(x + " " + y);  // '1 undefined'
+var y = 2;                 // 声明 + 初始化 y
+
+// Example 2 - Hoists
+var num1 = 3;                   // Declare and initialize num1
+num2 = 4;                       // Initialize num2
+console.log(num1 + " " + num2); //'3 4'
+var num2;                       // Declare num2 for hoisting
+
+// Example 3 - Hoists
+a = 'Cran';              // Initialize a
+b = 'berry';             // Initialize b
+console.log(a + "" + b); // 'Cranberry'
+var a, b;                // Declare both a & b for hoisting
+```
+
+------
+
+#### 2.13 作用域
+
+**参考答案：**
+
+**概念：**作用域就是一个独立的地盘，让变量不会外泄、暴露出去。也就是说**作用域最大的用处就是隔离变量**，不同作用域下同名变量不会有冲突。
+
+ES6 之前 JavaScript 没有块级作用域,只有**全局作用域**和**函数作用域**。ES6 的到来，为我们提供了‘**块级作用域**’,可通过新增命令 let 和 const 来体现。
+
+**扩展：**
+
+var ——ES5 变量声明方式
+
+1. 在变量未赋值时，变量undefined（未使用声明变量时也为undefined）
+2. 作用域——var的作用域为**方法作用域**；只要在方法内定义了，整个方法内的定义变量后的代码都可以使用
+
+let——ES6变量声明方式
+
+1. 在变量为声明前直接使用会报错
+2. 作用域——let为块作用域——通常let比var 范围要小
+3. let禁止重复声明变量，否则会报错；var可以重复声明
+
+const——ES6变量声明方式
+
+1. const为常量声明方式；**声明变量时必须初始化**，在后面出现的代码中不能再修改该常量的值
+2. const实际上保真的，并不是变量的值不得改动，而是变量指向的那个内存地址不得改动
+
+
+
+Scope（作用域）
+
+当前的执行上下文。[值 (en-US)](https://developer.mozilla.org/en-US/docs/Glossary/Value)和**表达式**在其中 "可见" 或可被访问到的上下文。如果一个**[变量 (en-US)](https://developer.mozilla.org/en-US/docs/Glossary/Variable)**或者其他表达式不 "在当前的作用域中"，那么它就是不可用的。 作用域也可以根据代码层次分层，以便子作用域可以访问父作用域，通常是指沿着链式的作用域链查找，而不能从父作用域引用子作用域中的变量和引用。
+
+当然，一个 [Function](https://developer.mozilla.org/zh-CN/docs/Glossary/Function) 将生成一个闭包（通常是返回一个函数引用），这个函数引用从外部作用域（在当前环境下）可以访问闭包内部的作用域。例如，下面的代码是无效的，并不是闭包的形式）：
+
+```js
+function exampleFunction() {
+    var x = "declared inside function";  // x只能在 exampleFunction 函数中使用
+    console.log("Inside function");
+    console.log(x);
+}
+
+console.log(x);  // 引发error
+```
+
+但是，由于变量在函数外被声明为全局变量，因此下面的代码是有效的（当前作用域不存在的变量和引用，就沿着作用域链继续寻找）：
+
+```js
+var x = "declared outside function";
+
+exampleFunction();
+
+function exampleFunction() {
+    console.log("Inside function");
+    console.log(x);
+}
+
+console.log("Outside function");
+console.log(x);
+```
+
+英文原文中，只提到了闭包的简单特例，也就是父作用域引用子作用域的变量或者引用。这儿做一个补充，当一个函数（foo）执行返回一个内部函数（bar）引用时，bar 将会保存 foo 的作用域引用。例如：
+
+```js
+function foo() {
+    const str = "bar in foo";
+    return function bar() {
+        return str;
+    }
+}
+
+var fun = foo();
+fun(); // "bar in foo"
+```
+
+------
+
+#### 2.14 HashMap 和 Array 有什么区别？
+
+ArrayMap是一个<key,value>映射的数据结构，它设计上更多的是考虑内存的优化，内部是使用两个数组进行数据存储，一个数组记录key的hash值，另外一个数组记录Value值，它和SparseArray一样，也会对key使用二分法进行从小到大排序，在添加、删除、查找数据的时候都是先使用二分查找法得到相应的index，然后通过index来进行添加、查找、删除等操作，所以，应用场景和SparseArray的一样，如果在数据量比较大的情况下，那么它的性能将退化至少50%。
+
+HashMap内部是使用一个默认容量为16的数组来存储数据的，而数组中每一个元素却又是一个链表的头结点，所以，更准确的来说，HashMap内部存储结构是使用哈希表的拉链结构（数组+链表），这种存储数据的方法叫做拉链法 。
+
+**参考答案：**
+
+1. 查找效率
+   HashMap因为其根据hashcode的值直接算出index,所以**其查找效率是随着数组长度增大而增加的**。
+   ArrayMap使用的是二分法查找，所以当数组长度每增加一倍时，就需要多进行一次判断，效率下降
+2. 扩容数量
+   HashMap初始值16个长度，每次扩容的时候，直接申请双倍的数组空间。
+   ArrayMap每次扩容的时候，如果size长度大于8时申请size*1.5个长度，大于4小于8时申请8个，小于4时申 请4个。这样比较ArrayMap其实是申请了更少的内存空间，但是扩容的频率会更高。因此，**如果数据量比较大的时候，还是使用HashMap更合适，因为其扩容的次数要比ArrayMap少很多。**
+3. 扩容效率
+   HashMap每次扩容的时候重新计算每个数组成员的位置，然后放到新的位置。
+   ArrayMap则是直接使用System.arraycopy，所以**效率上肯定是ArrayMap更占优势**。
+4. 内存消耗
+   **以ArrayMap采用了一种独特的方式，能够重复的利用因为数据扩容而遗留下来的数组空间**，方便下一个ArrayMap的使用。而HashMap没有这种设计。 由于ArrayMap之缓存了长度是4和8的时候，所以如果频繁的使用到Map，而且数据量都比较小的时候，ArrayMap无疑是相当的是节省内存的。
+
+总结
+综上所述，数据量比较小，并且需要频繁的使用Map存储数据的时候，推荐使用ArrayMap。 而数据量比较大的 时候，则推荐使用HashMap。
+
+------
+
+#### 2.15 HashMap和Object
+
+**参考答案：**
+
+Objects和Maps类似的是，它们都允许你按键存取一个值、删除键、检测一个键是否绑定了值。因此（并且也没有其他内建的替代方式了）过去我们一直都把对象当成Maps使用。不过Maps和Objects有一些重要的区别，在下列情况里使用Map会是更好的选择：
+
+|          | Map                                                          | Object                                                       |
+| :------- | :----------------------------------------------------------- | :----------------------------------------------------------- |
+| 意外的键 | Map默认情况不包含任何键。只包含显式插入的键。                | 一个Object有一个原型, 原型链上的键名有可能和你自己在对象上的设置的键名产生冲突。**注意:** 虽然 ES5 开始可以用Object.create(null)来创建一个没有原型的对象，但是这种用法不太常见。 |
+| 键的类型 | 一个Map的键可以是**任意值**，包括函数、对象或任意基本类型。  | 一个Object的键必须是一个 [String](https://developer.mozilla.org/zh-CN/docs/Web/JavaScript/Reference/String) 或是[Symbol](https://developer.mozilla.org/zh-CN/docs/Web/JavaScript/Reference/Global_Objects/Symbol)。 |
+| 键的顺序 | Map中的 key 是有序的。因此，当迭代的时候，一个Map对象以插入的顺序返回键值。 | 一个Object的键是无序的注意：自ECMAScript 2015规范以来，对象*确实*保留了字符串和Symbol键的创建顺序； 因此，在只有字符串键的对象上进行迭代将按插入顺序产生键。 |
+| Size     | Map的键值对个数可以轻易地通过[size](https://developer.mozilla.org/zh-CN/docs/Web/JavaScript/Reference/Global_Objects/Map/size) 属性获取 | Object的键值对个数**只能手动计算**                           |
+| 迭代     | Map是 [iterable](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Guide/iterable) 的，所以可以直接被迭代。 | 迭代一个Object需要以某种方式获取它的键然后才能迭代。         |
+| 性能     | 在频繁增删键值对的场景下表现更好。                           | 在频繁添加和删除键值对的场景下未作出优化。                   |
+
+------
+
+#### 2.16 javascript中arguments相关的问题
+
+**参考答案：**
+
+**arguments**
+
+在js中，我们在调用有参数的函数时，当往这个调用的有参函数传参时，js会把所传的参数全部存到一个叫arguments的对象里面。它是一个**类数组数据**
+
+**由来**
+
+Javascrip中每个函数都会有一个Arguments对象实例arguments，引用着函数的实参。**它是寄生在js函数当中的，不能显式创建，arguments对象只有函数开始时才可用**
+
+**作用**
+
+有了arguments这个对象之后，我们可以不用给函数预先设定形参了**，可以动态地通过arguments为函数加入参数**
+
+`arguments`对象是所有（非箭头）函数中都可用的**局部变量**。你可以使用`arguments`对象在函数中引用函数的参数。此对象包含传递给函数的每个参数，第一个参数在索引0处。例如，如果一个函数传递了三个参数，你可以以如下方式引用他们：
+
+```js
+arguments[0]
+arguments[1]
+arguments[2]
+```
+
+参数也可以被设置：
+
+```js
+arguments[1] = 'new value';
+```
+
+`arguments`对象不是一个 [`Array`](https://developer.mozilla.org/zh-CN/docs/Web/JavaScript/Reference/Global_Objects/Array) 。它类似于`Array`，**但除了length属性和索引元素之外没有任何`Array`属性**。例如，它没有 [pop](https://developer.mozilla.org/zh-CN/docs/Web/JavaScript/Reference/Global_Objects/Array/pop) 方法。但是它可以被转换为一个真正的`Array`：
+
+```js
+var args = Array.prototype.slice.call(arguments);
+var args = [].slice.call(arguments);
+
+// ES2015
+const args = Array.from(arguments);
+const args = [...arguments];
+```
+
+如果调用的参数多于正式声明接受的参数，则可以使用`arguments`对象。这种技术对于可以传递可变数量的参数的函数很有用。使用 `arguments.length`来确定传递给函数参数的个数，然后使用`arguments`对象来处理每个参数。要确定函数[签名](https://developer.mozilla.org/zh-CN/docs/Glossary/Signature/Function)中（输入）参数的数量，请使用`Function.length`属性。
+
+[属性](https://developer.mozilla.org/zh-CN/docs/Web/JavaScript/Reference/Functions/arguments#properties)
+
+- `arguments.callee`
+
+  指向参数所属的当前执行的函数。
+
+- `arguments.length`
+
+  传递给函数的参数数量。
+
+- `arguments[@@iterator]`
+
+  返回一个新的[Array 迭代器](https://developer.mozilla.org/zh-CN/docs/Web/JavaScript/Reference/Global_Objects/Array/@@iterator) 对象，该对象包含参数中每个索引的值。
+
+------
+
+#### 2.17 instanceOf 原理，手动实现 function isInstanceOf (child, Parent)
+
+**参考答案**：
+
+instanceof主要作用就是判断一个实例是否属于某种类型
+
+```js
+let person = function(){
+
+}
+let no = new person()
+no instanceof person//true
+```
+
+instanceOf 原理
+
+```js
+function new_instance_of(leftVaule, rightVaule) { 
+    let rightProto = rightVaule.prototype; // 取右表达式的 prototype 值
+    leftVaule = leftVaule.__proto__; // 取左表达式的__proto__值
+    while (true) {
+        if (leftVaule === null) {
+            return false;    
+        }
+        if (leftVaule === rightProto) {
+            return true;    
+        } 
+        leftVaule = leftVaule.__proto__ 
+    }
+}
+```
+
+其实 instanceof 主要的**实现原理就是只要右边变量的 prototype 在左边变量的原型链上即可**。因此，instanceof 在查找的过程中会遍历左边变量的原型链，直到找到右边变量的 prototype，如果查找失败，则会返回 false，告诉我们左边变量并非是右边变量的实例。
+
+同时还要了解js的原型继承原理
+
+我们知道每个 JavaScript 对象均有一个隐式的 proto 原型属性，而显式的原型属性是 prototype，只有 Object.prototype.proto 属性在未修改的情况下为 null 值
+
+手动实现
+
+```js
+function instance_of(L, R) {//L 表示左表达式，R 表示右表达式
+    var O = R.prototype;
+    L = L.__proto__;
+    while (true) { 
+        if (L === null) 
+        return false; 
+        if (O === L) // 这里重点：当 O 严格等于 L 时，返回true 
+        return true; 
+        L = L.__proto__; 
+    } 
+}
+// 开始测试
+var a = []
+var b = {}
+
+function Foo(){}
+var c = new Foo()
+function child(){}
+function father(){}
+child.prototype = new father() 
+var d = new child()
+
+console.log(instance_of(a, Array)) // true
+console.log(instance_of(b, Object)) // true
+console.log(instance_of(b, Array)) // false
+console.log(instance_of(a, Object)) // true
+console.log(instance_of(c, Foo)) // true
+console.log(instance_of(d, child)) // true
+console.log(instance_of(d, father)) // true
+
+```
+
+**`instanceof`** **运算符**用于检测构造函数的 `prototype` 属性是否出现在某个实例对象的原型链上。
+
+需要注意的是，如果表达式 `obj instanceof Foo` 返回 `true`，则并不意味着该表达式会永远返回 `true`，因为 `Foo.prototype` 属性的值有可能会改变，改变之后的值很有可能不存在于 `obj` 的原型链上，这时原表达式的值就会成为 `false`。另外一种情况下，原表达式的值也会改变，就是改变对象 `obj` 的原型链的情况，虽然在目前的ES规范中，我们只能读取对象的原型而不能改变它，但借助于非标准的 `__proto__` 伪属性，是可以实现的。比如执行 `obj.__proto__ = {}` 之后，`obj instanceof Foo` 就会返回 `false` 了。
+
+------
+
+#### 2.18 数组去重
+
+**参考答案：**
+
+**1. 利用ES6 Set去重（ES6中最常用）**
+
+```js
+function unique (arr) {
+  return Array.from(new Set(arr))
+}
+var arr = [1,1,'true','true',true,true,15,15,false,false, undefined,undefined, null,null, NaN, NaN,'NaN', 0, 0, 'a', 'a',{},{}];
+console.log(unique(arr))
+ //[1, "true", true, 15, false, undefined, null, NaN, "NaN", 0, "a", {}, {}]
+```
+
+不考虑兼容性，这种去重的方法代码最少。这种方法还无法去掉“{}”空对象，后面的高阶方法会添加去掉重复“{}”的方法。
+
+**2. 利用for嵌套for，然后splice去重（ES5中最常用）**
+
+```js
+function unique(arr){            
+        for(var i=0; i<arr.length; i++){
+            for(var j=i+1; j<arr.length; j++){
+                if(arr[i]==arr[j]){         //第一个等同于第二个，splice方法删除第二个
+                    arr.splice(j,1);
+                    j--;
+                }
+            }
+        }
+return arr;
+}
+var arr = [1,1,'true','true',true,true,15,15,false,false, undefined,undefined, null,null, NaN, NaN,'NaN', 0, 0, 'a', 'a',{},{}];
+    console.log(unique(arr))
+    //[1, "true", 15, false, undefined, NaN, NaN, "NaN", "a", {…}, {…}]     //NaN和{}没有去重，两个null直接消失了
+```
+
+双层循环，外层循环元素，内层循环时比较值。值相同时，则删去这个值。
+
+**3. 利用indexOf去重**
+
+```js
+function unique(arr) {
+    if (!Array.isArray(arr)) {
+        console.log('type error!')
+        return
+    }
+    var array = [];
+    for (var i = 0; i < arr.length; i++) {
+        if (array .indexOf(arr[i]) === -1) {
+            array .push(arr[i])
+        }
+    }
+    return array;
+}
+var arr = [1,1,'true','true',true,true,15,15,false,false, undefined,undefined, null,null, NaN, NaN,'NaN', 0, 0, 'a', 'a',{},{}];
+console.log(unique(arr))
+   // [1, "true", true, 15, false, undefined, null, NaN, NaN, "NaN", 0, "a", {…}, {…}]  //NaN、{}没有去重
+```
+
+新建一个空的结果数组，for 循环原数组，判断结果数组是否存在当前元素，如果有相同的值则跳过，不相同则push进数组。
+
+**4. 利用sort()**
+
+```js
+function unique(arr) {
+    if (!Array.isArray(arr)) {
+        console.log('type error!')
+        return;
+    }
+    arr = arr.sort()
+    var arrry= [arr[0]];
+    for (var i = 1; i < arr.length; i++) {
+        if (arr[i] !== arr[i-1]) {
+            arrry.push(arr[i]);
+        }
+    }
+    return arrry;
+}
+     var arr = [1,1,'true','true',true,true,15,15,false,false, undefined,undefined, null,null, NaN, NaN,'NaN', 0, 0, 'a', 'a',{},{}];
+        console.log(unique(arr))
+// [0, 1, 15, "NaN", NaN, NaN, {…}, {…}, "a", false, null, true, "true", undefined]      //NaN、{}没有去重
+```
+
+利用sort()排序方法，然后根据排序后的结果进行遍历及相邻元素比对。
+
+**5. 利用对象的属性不能相同的特点进行去重（这种数组去重的方法有问题，不建议用，有待改进）**
+
+```js
+function unique(arr) {
+    if (!Array.isArray(arr)) {
+        console.log('type error!')
+        return
+    }
+    var arrry= [];
+     var  obj = {};
+    for (var i = 0; i < arr.length; i++) {
+        if (!obj[arr[i]]) {
+            arrry.push(arr[i])
+            obj[arr[i]] = 1
+        } else {
+            obj[arr[i]]++
+        }
+    }
+    return arrry;
+}
+    var arr = [1,1,'true','true',true,true,15,15,false,false, undefined,undefined, null,null, NaN, NaN,'NaN', 0, 0, 'a', 'a',{},{}];
+        console.log(unique(arr))
+//[1, "true", 15, false, undefined, null, NaN, 0, "a", {…}]    //两个true直接去掉了，NaN和{}去重
+```
+
+**6. 利用includes**
+
+```js
+function unique(arr) {
+    if (!Array.isArray(arr)) {
+        console.log('type error!')
+        return
+    }
+    var array =[];
+    for(var i = 0; i < arr.length; i++) {
+            if( !array.includes( arr[i]) ) {//includes 检测数组是否有某个值
+                    array.push(arr[i]);
+              }
+    }
+    return array
+}
+var arr = [1,1,'true','true',true,true,15,15,false,false, undefined,undefined, null,null, NaN, NaN,'NaN', 0, 0, 'a', 'a',{},{}];
+    console.log(unique(arr))
+    //[1, "true", true, 15, false, undefined, null, NaN, "NaN", 0, "a", {…}, {…}]     //{}没有去重
+
+```
+
+**7. 利用hasOwnProperty**
+
+```js
+function unique(arr) {
+    var obj = {};
+    return arr.filter(function(item, index, arr){
+        return obj.hasOwnProperty(typeof item + item) ? false : (obj[typeof item + item] = true)
+    })
+}
+    var arr = [1,1,'true','true',true,true,15,15,false,false, undefined,undefined, null,null, NaN, NaN,'NaN', 0, 0, 'a', 'a',{},{}];
+        console.log(unique(arr))
+//[1, "true", true, 15, false, undefined, null, NaN, "NaN", 0, "a", {…}]   //所有的都去重了
+
+```
+
+利用hasOwnProperty 判断是否存在对象属性
+
+**8. 利用filter**
+
+```js
+function unique(arr) {
+  return arr.filter(function(item, index, arr) {
+    //当前元素，在原始数组中的第一个索引==当前索引值，否则返回当前元素
+    return arr.indexOf(item, 0) === index;
+  });
+}
+    var arr = [1,1,'true','true',true,true,15,15,false,false, undefined,undefined, null,null, NaN, NaN,'NaN', 0, 0, 'a', 'a',{},{}];
+        console.log(unique(arr))
+//[1, "true", true, 15, false, undefined, null, "NaN", 0, "a", {…}, {…}]
+//{}没有去重
+```
+
+**9. 利用递归去重**
+
+```js
+function unique(arr) {
+        var array= arr;
+        var len = array.length;
+
+    array.sort(function(a,b){   //排序后更加方便去重
+        return a - b;
+    })
+
+    function loop(index){
+        if(index >= 1){
+            if(array[index] === array[index-1]){
+                array.splice(index,1);
+            }
+            loop(index - 1);    //递归loop，然后数组去重
+        }
+    }
+    loop(len-1);
+    return array;
+}
+ var arr = [1,1,'true','true',true,true,15,15,false,false, undefined,undefined, null,null, NaN, NaN,'NaN', 0, 0, 'a', 'a',{},{}];
+console.log(unique(arr))
+//[1, "a", "true", true, 15, false, 1, {…}, null, NaN, NaN, "NaN", 0, "a", {…}, undefined]
+//{},NaN没有去重
+```
+
+**10. 利用Map数据结构去重**
+
+```js
+function arrayNonRepeatfy(arr) {
+  let map = new Map();
+  let array = new Array();  // 数组用于返回结果
+  for (let i = 0; i < arr.length; i++) {
+    if(map .has(arr[i])) {  // 如果有该key值
+      map .set(arr[i], true); 
+    } else { 
+      map .set(arr[i], false);   // 如果没有该key值
+      array .push(arr[i]);
+    }
+  } 
+  return array ;
+}
+ var arr = [1,1,'true','true',true,true,15,15,false,false, undefined,undefined, null,null, NaN, NaN,'NaN', 0, 0, 'a', 'a',{},{}];
+    console.log(arrayNonRepeatfy(arr))
+//[1, 'true', true,  15, false, undefined, null,  NaN, 'NaN', 0, 'a',   {}, {} ]
+//{}没有去重
+
+```
+
+创建一个空Map数据结构，遍历需要去重的数组，把数组的每一个元素作为key存到Map中。由于Map中不会出现相同的key值，所以最终得到的就是去重后的结果。
+
+**11. 利用reduce+includes**
+
+```js
+function unique(arr){
+    return arr.reduce((prev,cur) => prev.includes(cur) ? prev : [...prev,cur],[]);
+}
+var arr = [1,1,'true','true',true,true,15,15,false,false, undefined,undefined, null,null, NaN, NaN,'NaN', 0, 0, 'a', 'a',{},{}];
+console.log(unique(arr));
+// [1, "true", true, 15, false, undefined, null, NaN, "NaN", 0, "a", {…}, {…}]
+//{}没有去重
+```
+
+**12. [...new Set(arr)]**
+
+```js
+[...new Set(arr)] 
+//代码就是这么少----（其实，严格来说并不算是一种，相对于第一种方法来说只是简化了代码）
+//[1, 'true', true,  15, false, undefined, null,  NaN, 'NaN', 0, 'a',   {}, {} ] 
+// {}没有去重
+```
+
+
+
+------
+
+#### 2.19 编码和字符集的区别
+
+**参考答案：**
+
+字符集是书写系统字母与符号的集合，而字符编码则是将字符映射为一特定的字节或字节序列，是一种规则。通常特定的字符集采用特定的编码方式（即一种字符集对应一种字符编码（例如：ASCII、IOS-8859-1、GB2312、GBK，都是即表示了字符集又表示了对应的字符编码，但Unicode不是，它采用现代的模型））
+
+**扩展：**
+
+字符：在计算机和电信技术中，一个字符是一个单位的字形、类字形单位或符号的基本信息。即一个字符可以是一个中文汉字、一个英文字母、一个阿拉伯数字、一个标点符号等。
+
+字符集：多个字符的集合。例如GB2312是中国国家标准的简体中文字符集，GB2312收录简化汉字（6763个）及一般符号、序号、数字、拉丁字母、日文假名、希腊字母、俄文字母、汉语拼音符号、汉语注音字母，共 7445 个图形字符。
+
+字符编码：把字符集中的字符编码为（映射）指定集合中的某一对象（例如：比特模式、自然数序列、电脉冲），以便文本在计算机中存储和通过通信网络的传递。
+
+一套编码系统定义字节与文本间的映射。一连串字节文本能让不同文本解释得以进行。我们指明一套特定编码系统时（如 UTF-8），也就指明了字节得以解释的方式。
+
+例如，我们通常在 HTML 里声明 UTF-8 字符编码，使用如下：
+
+```html
+<meta charset="utf-8">
+```
+
+这就确保你在 HTML 文档中可以使用几乎任何一种人类语言中的字符，并且会稳定显示。
+
+------
+
+#### 2.20 null 和 undefined 的区别，如何让一个属性变为null
+
+**参考答案：**
+
+undefined 表示一个变量自然的、最原始的状态值，而 null 则表示一个变量被人为的设置为空对象，而不是原始状态。所以，**在实际使用过程中，为了保证变量所代表的语义，不要对一个变量显式的赋值 undefined**，**当需要释放一个对象时，直接赋值为 null 即可**。
+
+**解析：**
+
+**undefined** 的字面意思就是：未定义的值 。这个值的语义是，希望**表示一个变量最原始的状态，而非人为操作的结果 。** 这种原始状态会在以下 4 种场景中出现：
+
+1. 声明了一个变量，但没有赋值
+2. 访问对象上不存在的属性
+3. 函数定义了形参，但没有传递实参
+4. 使用 void 对表达式求值
+
+因此，undefined 一般都来自于某个表达式最原始的状态值，**不是人为操作的结果**。当然，你也可以手动给一个变量赋值 undefined，但这样做没有意义，因为一个变量不赋值就是 undefined 。
+
+**null** 的字面意思是：空值 。这个值的语义是，希望**表示 一个对象被人为的重置为空对象，而非一个变量最原始的状态 。** 在内存里的表示就是，栈中的变量没有指向堆中的内存对象
+
+null 有属于自己的类型 Null，而不属于Object类型，typeof 之所以会判定为 Object 类型，是**因为**JavaScript 数据类型在底层都是以二进制的形式表示的，**二进制的前三位为 0 会被 typeof 判断为对象类型**，而 null 的二进制位恰好都是 0 ，因此，**null 被误判断为 Object 类型**。
+
+当检测 `null` 或 `undefined` 时，注意[相等（==）与全等（===）两个操作符的区别](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Operators/Comparison_Operators) ，前者会执行类型转换：
+
+```js
+typeof null        // "object" (因为一些以前的原因而不是'null')
+typeof undefined   // "undefined"
+null === undefined // false
+null  == undefined // true
+null === null // true
+null == null // true
+!null //true
+isNaN(1 + null) // false
+isNaN(1 + undefined) // true
+```
+
+
+
+------
+
+#### 2.21 数组和伪数组的区别
+
+**参考答案**：
+
+1. 定义
+
+- 数组是一个特殊对象,与常规对象的区别：
+  - 当由新元素添加到列表中时，自动更新length属性
+  - 设置length属性，可以截断数组
+  - 从Array.protoype中继承了方法
+  - 属性为'Array'
+- 类数组是一个拥有length属性，并且他属性为非负整数的普通对象，**类数组不能直接调用数组方法。**
+
+1. 区别
+   本质：**类数组是简单对象，它的原型关系与数组不同**。
+
+```js
+// 原型关系和原始值转换
+let arrayLike = {
+    length: 10,
+};
+console.log(arrayLike instanceof Array); // false
+console.log(arrayLike.__proto__.constructor === Array); // false
+console.log(arrayLike.toString()); // [object Object]
+console.log(arrayLike.valueOf()); // {length: 10}
+
+let array = [];
+console.log(array instanceof Array); // true
+console.log(array.__proto__.constructor === Array); // true
+console.log(array.toString()); // ''
+console.log(array.valueOf()); // []
+
+```
+
+1. 类数组转换为数组
+
+- 转换方法
+  - 使用Array.from()
+  - 使用Array.prototype.slice.call()
+  - 使用Array.prototype.forEach()进行属性遍历并组成新的数组
+- 转换须知
+  - 转换后的数组长度由length属性决定。索引不连续时转换结果是连续的，会自动补位。
+  - 代码示例
+
+```js
+let al1 = {
+    length: 4,
+    0: 0,
+    1: 1,
+    3: 3,
+    4: 4,
+    5: 5,
+};
+console.log(Array.from(al1)) // [0, 1, undefined, 3]
+
+```
+
+- ②仅考虑 0或正整数 的索引
+
+```js
+// 代码示例
+let al2 = {
+    length: 4,
+    '-1': -1,
+    '0': 0,
+    a: 'a',
+    1: 1
+};
+console.log(Array.from(al2)); // [0, 1, undefined, undefined]
+
+```
+
+- ③使用slice转换产生稀疏数组
+
+```js
+// 代码示例
+let al2 = {
+    length: 4,
+    '-1': -1,
+    '0': 0,
+    a: 'a',
+    1: 1
+};
+console.log(Array.prototype.slice.call(al2)); // [ 0, 1, <2 empty items> ]
+
+```
+
+1. 使用数组方法操作类数组注意地方
+
+```js
+  let arrayLike2 = {
+    2: 3,
+    3: 4,
+    length: 2,
+    push: Array.prototype.push
+  }
+
+  // push 操作的是索引值为 length 的位置
+  arrayLike2.push(1);
+  console.log(arrayLike2); // {2: 1, 3: 4, length: 3, push: ƒ}
+  arrayLike2.push(2);
+  console.log(arrayLike2); // {2: 1, 3: 2, length: 4, push: ƒ}
+
+```
+
+
+
+------
+
