--- a/牛客刷题题目/前端校招面试题目合集.md
+++ b/牛客刷题题目/前端校招面试题目合集.md
@@ -1172,3 +1172,147 @@ console.log(Array.prototype.slice.call(al2)); // [ 0, 1, <2 empty items> ]
 
 ------
 
+####  2.22 手写一个发布订阅
+
+**参考答案**：
+
+```js
+// 发布订阅中心, on-订阅, off取消订阅, emit发布, 内部需要一个单独事件中心caches进行存储;
+interface CacheProps {
+  [key: string]: Array<((data?: unknown) => void)>;
+}
+
+class Observer {
+  private caches: CacheProps = {}; // 事件中心
+  on (eventName: string, fn: (data?: unknown) => void){ // eventName事件名-独一无二, fn订阅后执行的自定义行为
+    this.caches[eventName] = this.caches[eventName] || [];
+    this.caches[eventName].push(fn);
+  }
+
+  emit (eventName: string, data?: unknown) { // 发布 => 将订阅的事件进行统一执行
+    if (this.caches[eventName]) {
+      this.caches[eventName].forEach((fn: (data?: unknown) => void) => fn(data));
+    }
+  }
+
+  off (eventName: string, fn?: (data?: unknown) => void) { // 取消订阅 => 若fn不传, 直接取消该事件所有订阅信息
+    if (this.caches[eventName]) {
+      const newCaches = fn ? this.caches[eventName].filter(e => e !== fn) : [];
+      this.caches[eventName] = newCaches;
+    }
+  }
+
+}
+
+```
+
+**定义**
+发布-订阅模式其实是一种对象间一对多的依赖关系，当一个对象的状态发送改变时，所有依赖于它的对象都将得到状态改变的通知。
+订阅者（Subscriber）把自己想订阅的事件注册（Subscribe）到调度中心（Event Channel），当发布者（Publisher）发布该事件（Publish Event）到调度中心，也就是该事件触发时，由调度中心统一调度（Fire Event）订阅者注册到调度中心的处理代码。
+
+**实现思路**
+
+1. 创建一个 EventEmitter 类
+2. 在该类上创建一个事件中心（Map）
+3. on 方法用来把函数 fn 都加到事件中心中（订阅者注册事件到调度中心）
+4. emit 方法取到 arguments 里第一个当做 event，根据 event 值去执行对应事件中心中的函数（发布者发布事件到调度中心，调度中心处理代码）
+5. off 方法可以根据 event 值取消订阅（取消订阅）
+6. once 方法只监听一次，调用完毕后删除缓存函数（订阅一次）
+7. 注册一个 newListener 用于监听新的事件订阅
+
+```js
+
+class EventEmitter{
+    //第一步，创建一个类，并初始化一个事件存储中心
+    constructor(){
+        // 用来存放注册的事件与回调
+        this._events={};
+    }
+
+    //第二步，实现事件的订阅方法 on
+    //将事件回调函数存储到对应的事件上
+    on(eventName,callback){
+        //第六步，注册一个 newListener 用于监听新的事件订阅
+        //在用户注册的事件的时候，发布一下newListener事件
+        // 如果绑定的事件不是newListener 就触发改回调
+        if (this._events[eventName]) {
+            if (this.eventName!=="newListener") {
+                this.emit("newListener",eventName);
+            }
+        }
+
+        //由于一个事件可能注册多个回调函数，所以使用数组来存储事件队列
+        const callbacks=this._events[eventName] || [];
+        callbacks.push(callback);
+        this._events[eventName]=callbacks;
+    }
+
+    //第三步，实现事件的发布方法 emit
+    //获取到事件对应的回调函数依次执行
+    emit(eventName,...args){
+        //args 用于收集发布事件时传递的参数
+        const callbacks=this._events[eventName]  || [];
+        callbacks.forEach(cb=>cb(...args));
+    }
+
+    //第四步，实现事件的取消订阅方法 off 
+    //找到事件对应的回调函数，删除对应的回调函数
+    off(eventName,callback){
+        const callbacks=this._events[eventName] || [];
+        /*fn.initialCallback!=callback 用于once的取消订阅 */
+        const newCallbacks=callbacks.filter(fn=>fn!=callback && fn.initialCallback!=callback);
+
+        this._events[eventName]=newCallbacks;
+    }
+
+    //第五步，实现事件的单次订阅方法 once
+    //1.先注册 2.事件执行后取消订阅
+    once(eventName,callback){
+        //由于需要在回调函数执行后，取消订阅当前事件，所以需要对传入的回调函数做一层包装,然后绑定包装后的函数
+        const one=(...args)=>{
+            // 执行回调函数
+            callback(...args);
+            //取消订阅当前事件
+            this.off(eventName,one);
+        }
+        // 考虑：如果当前事件在未执行，被用户取消订阅，能否取消？
+        // 由于：我们订阅事件的时候，修改了原回调函数的引用，所以，用户触发 off 的时候不能找到对应的回调函数
+        // 所以，我们需要在当前函数与用户传入的回调函数做一个绑定，我们通过自定义属性来实现
+        one.initialCallback=callback;
+        this.on(eventName,one);
+    }
+
+}
+
+//测试用例
+const events=new EventEmitter();
+
+events.on("newListener",function(eventName){
+    console.log("eventName: ",eventName);
+});
+
+events.on("hello",function(){
+    console.log("Hello World!");
+});
+
+let cb=function(){
+    console.log("cb");
+}
+events.on("hello",cb);
+events.off("hello",cb);
+
+function once(){
+    console.log("once");
+}
+events.on("hello",once);
+events.off("hello",once);
+
+events.emit("hello");
+events.emit("hello");
+
+```
+
+
+
+------
+
