--- a/力扣/力扣算法.md
+++ b/力扣/力扣算法.md
@@ -6634,6 +6634,40 @@ const isDigit = (ch) => {
 
 ```
 
+## 386.字典序排数
+
+给你一个整数 n ，按字典序返回范围 [1, n] 内所有整数。
+
+你必须设计一个时间复杂度为 O(n) 且使用 O(1) 额外空间的算法。
+
+```js
+/**
+ * @param {number} n
+ * @return {number[]}
+ */
+var lexicalOrder = function(n) {
+    let ans=[];
+    let number=1;
+    for(let i=0;i<n;i++){
+        ans.push(number);
+        if (number*10<=n) {
+            number*=10;
+        }else{
+            while(number%10===9 || number+1>n){
+                number=Math.floor(number/10);
+            }
+            number++;
+        }
+    }
+    return ans;
+};
+
+let test=123;
+let result=lexicalOrder(test);
+console.log(result);
+
+```
+
 
 
 ## 389. 找不同
